[package]
name = "get-size"
description = "Determine the size in bytes an object occupies inside RAM."
version = "0.1.4"
edition = "2021"
authors = ["Denis Kerp"]
readme = "README.md"
repository = "https://github.com/DKerp/get-size"
license = "MIT"
keywords = ["size", "heap", "ram", "cache", "memory"]
categories = ["memory-management", "caching"]

[dependencies]
get-size-derive = { version = "^0.1.3", optional = true }

[features]
default = []
derive = ["get-size-derive"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
