[package]
name = "get-size"
description = "Determine the size in bytes an object occupies inside RAM."
version = "0.1.4"
edition = "2021"
authors = ["Denis Kerp"]
readme = "README.md"
repository = "https://github.com/DKerp/get-size"
license = "MIT"
keywords = ["size", "heap", "ram", "cache", "memory"]
categories = ["memory-management", "caching"]
resolver = "2"

[dependencies]
get-size-derive = { version = "0.1.3", path = "get-size-derive", optional = true }
indexmap = { version = "2.0", optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
get-size = { path = ".", features = ["derive"] }

[features]
default = []
derive = ["get-size-derive"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
