[package]
name = "get-size-derive"
description = "Derives the GetSize trait."
version = "0.1.1"
edition = "2021"
authors = ["Denis Kerp"]
readme = "README.md"
repository = "https://github.com/DKerp/get-size/get-size-derive"
license = "MIT"
keywords = ["size", "heap", "ram", "cache", "memory"]
categories = ["memory-management", "caching"]

[lib]
proc-macro = true

[dependencies]
syn = "^1"
quote = "^1"

[dev-dependencies]
get-size = { path = "../../get-size"}
